--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   "homepage": "https://github.com/MartyMiniac/Social-Jam#readme",
   "dependencies": {
     "axios": "^0.26.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
