implement room based chat system and room onboarding via link

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "short-unique-id": "^4.4.4",
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
